--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp-ava": "^0.18.0",
     "gulp-typescript": "^3.2.2",
     "run-sequence": "^2.2.0",
+    "tslint": "^5.7.0",
     "typescript": "^2.5.2"
   }
 }
