--- a/package.json
+++ b/package.json
@@ -13,19 +13,23 @@
     "start": "node ./",
     "build": "gulp",
     "dev": "gulp watch",
-    "test": "ava"
+    "test": "nyc ava && nyc report --reporter=html",
+    "coveralls": "nyc ava && nyc report --reporter=text-lcov | coveralls"
   },
   "dependencies": {
     "parse5": "^3.0.2"
   },
   "devDependencies": {
+    "@types/util.promisify": "^1.0.0",
     "ava": "^0.22.0",
+    "coveralls": "^3.0.0",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-ava": "^0.18.0",
     "gulp-typescript": "^3.2.2",
+    "nyc": "^11.2.1",
     "run-sequence": "^2.2.0",
     "tslint": "^5.7.0",
-    "typescript": "^2.5.2"
+    "typescript": "^2.5.3"
   }
 }
