--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/node-fetch": "^1.6.7",
     "ava": "^0.24.0",
     "coveralls": "^3.0.0",
+    "deep-assign": "^2.0.0",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-ava": "^0.18.0",
