--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
   "dependencies": {
     "cli-color": "^1.2.0",
     "meow": "^4.0.0",
-    "parse5": "^3.0.3"
+    "parse5": "^3.0.3",
+    "strip-json-comments": "^2.0.1"
   },
   "devDependencies": {
     "@types/cli-color": "^0.3.29",
     "@types/meow": "^3.6.2",
     "@types/node-fetch": "^1.6.7",
+    "@types/strip-json-comments": "^0.0.30",
     "ava": "^0.24.0",
     "coveralls": "^3.0.0",
     "deep-assign": "^2.0.0",
