--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "node-fetch": "^1.7.3",
     "os-locale": "^2.1.0",
     "parse5": "^3.0.3",
+    "strip-ansi": "^4.0.0",
     "strip-json-comments": "^2.0.1"
   },
   "devDependencies": {
@@ -35,6 +36,7 @@
     "@types/meow": "^3.6.2",
     "@types/node-fetch": "^1.6.7",
     "@types/os-locale": "^2.1.0",
+    "@types/strip-ansi": "^3.0.0",
     "@types/strip-json-comments": "^0.0.30",
     "ava": "^0.24.0",
     "coveralls": "^3.0.0",
