--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "ava": "^0.24.0",
     "coveralls": "^3.0.0",
     "del": "^3.0.0",
+    "eslint": "^4.13.1",
     "gulp": "^3.9.1",
     "gulp-ava": "^0.18.0",
     "gulp-typescript": "^3.2.3",
