--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "markuplint",
-  "version": "0.10.0-alpha.2",
+  "version": "0.10.0",
   "description": "HTML linter for legacy/modern HTML, Web Components, SVG, MathML, AMP HTML and more.",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -42,15 +42,15 @@
     "ava": "^0.24.0",
     "coveralls": "^3.0.0",
     "del": "^3.0.0",
-    "eslint": "^4.13.1",
+    "eslint": "^4.14.0",
     "gulp": "^3.9.1",
     "gulp-ava": "^0.18.0",
     "gulp-typescript": "^3.2.3",
     "jsdom": "^11.5.1",
-    "markuplint-plugin-textlint": "^0.2.0",
-    "nyc": "^11.3.0",
+    "markuplint-plugin-textlint": "^0.3.4",
+    "nyc": "^11.4.1",
     "run-sequence": "^2.2.0",
-    "textlint": "^10.0.0",
+    "textlint": "^10.1.0",
     "textlint-rule-preset-japanese": "^2.0.0",
     "tslint": "^5.8.0",
     "typescript": "^2.6.2"
