--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "cli-color": "^1.2.0",
+    "cosmiconfig": "^3.1.0",
     "deep-assign": "^2.0.0",
     "find-node-modules": "^1.0.4",
     "meow": "^4.0.0",
