WIP HTML LS spec

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "dev": "gulp watch",
     "test": "nyc ava && nyc report --reporter=html",
     "cover": "nyc ava && nyc report --reporter=text-lcov | coveralls",
-    "scrape": "node ./rulesets/_scraper/"
+    "scrape": "node ./rulesets/_scraper/",
+    "ruleset": "node ./rulesets/resolver.js"
   },
   "dependencies": {
     "cli-color": "^1.2.0",
