--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "markuplint",
-  "version": "0.11.0-beta.2",
+  "version": "0.11.0",
   "description": "HTML linter for legacy/modern HTML, Web Components, SVG, MathML, AMP HTML and more.",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -31,17 +31,15 @@
     "node-fetch": "^1.7.3",
     "os-locale": "^2.1.0",
     "parse5": "^3.0.3",
-    "strip-ansi": "^4.0.0",
-    "strip-json-comments": "^2.0.1"
+    "strip-ansi": "^4.0.0"
   },
   "devDependencies": {
     "@types/cli-color": "^0.3.29",
-    "@types/deep-assign": "^0.1.0",
+    "@types/deep-assign": "^0.1.1",
     "@types/meow": "^3.6.2",
     "@types/node-fetch": "^1.6.7",
     "@types/os-locale": "^2.1.0",
     "@types/strip-ansi": "^3.0.0",
-    "@types/strip-json-comments": "^0.0.30",
     "ava": "^0.24.0",
     "coveralls": "^3.0.0",
     "del": "^3.0.0",
@@ -52,9 +50,9 @@
     "jsdom": "^11.5.1",
     "markuplint-plugin-textlint": "^0.3.4",
     "nyc": "^11.4.1",
-    "run-sequence": "^2.2.0",
-    "textlint": "^10.1.0",
-    "textlint-rule-preset-japanese": "^2.0.0",
+    "run-sequence": "^2.2.1",
+    "textlint": "^10.1.1",
+    "textlint-rule-preset-japanese": "^4.0.0",
     "tslint": "^5.8.0",
     "typescript": "^2.6.2"
   }
