remove gulp-ava

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "cli": "node ./bin/",
     "debugger": "node ./lib/debugger/",
     "build": "gulp build",
-    "dev": "gulp watch",
+    "dev": "tsc --watch & ava --watch",
     "test": "nyc ava && nyc report --reporter=html",
     "cover": "nyc ava && nyc report --reporter=text-lcov | coveralls",
     "scrape": "node ./rulesets/_scraper/",
@@ -46,8 +46,6 @@
     "del": "^3.0.0",
     "eslint": "^4.15.0",
     "gulp": "^4.0.0",
-    "gulp-ava": "^0.18.0",
-    "gulp-plumber": "^1.2.0",
     "gulp-typescript": "^4.0.0-alpha.1",
     "jsdom": "^11.5.1",
     "markuplint-plugin-textlint": "^0.4.0",
