--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,11 @@
       "es2017",
       "esnext"
     ],
-    "outDir": "./lib/"
+    "outDir": "./lib/",
+    "baseUrl": ".",
+    "paths": {
+      "parse5": ["./node_modules/parse5/lib/index.d.ts"]
+    },
   },
   "exclude": [
     "node_modules",
