--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "markuplint",
-  "version": "0.16.0",
+  "version": "0.16.1",
   "description": "HTML linter for legacy/modern HTML, Web Components, SVG, MathML, AMP HTML and more.",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -51,9 +51,9 @@
     "markuplint-plugin-textlint": "^0.4.0",
     "node-fetch": "^1.7.3",
     "nyc": "^11.4.1",
-    "textlint": "^10.1.2",
+    "textlint": "^10.1.3",
     "textlint-rule-preset-japanese": "^4.0.0",
     "tslint": "^5.9.1",
-    "typescript": "^2.7.0"
+    "typescript": "^2.7.0-rc"
   }
 }
