--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "cli": "node ./bin/",
     "debugger": "node ./lib/debugger/",
-    "build": "gulp build",
+    "build": "find ./lib -name '*.ts' | xargs rm -f && find ./lib -name '*.ts' | xargs rm -f && tsc",
     "dev": "tsc --watch & ava --watch",
     "test": "nyc ava && nyc report --reporter=html",
     "cover": "nyc ava && nyc report --reporter=text-lcov | coveralls",
@@ -44,10 +44,7 @@
     "@types/strip-ansi": "^3.0.0",
     "ava": "^0.25.0",
     "coveralls": "^3.0.0",
-    "del": "^3.0.0",
     "eslint": "^4.17.0",
-    "gulp": "^4.0.0",
-    "gulp-typescript": "^4.0.0-alpha.1",
     "jsdom": "^11.6.2",
     "markuplint-plugin-textlint": "^0.5.0",
     "node-fetch": "^2.0.0",
