--- a/package.json
+++ b/package.json
@@ -52,6 +52,6 @@
     "textlint": "^10.1.4",
     "textlint-rule-preset-japanese": "^4.0.0",
     "tslint": "^5.9.1",
-    "typescript": "^2.7.1"
+    "typescript": "2.8.0-dev.20180206"
   }
 }
