enable to esModuleInterop in tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "module": "commonjs",
     "declaration":  true,
     "strict": true,
+    "esModuleInterop": true,
     "lib": [
       "es2015",
       "es2016",
