--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "cli": "node ./bin/",
     "debugger": "node ./lib/debugger/",
     "build": "find ./lib -name '*.ts' | xargs rm -f && find ./lib -name '*.ts' | xargs rm -f && tsc",
-    "dev": "tsc --watch & ava --watch",
+    "dev": "tsc --watch & ava --verbose --watch",
+    "dev-c": "tsc --watch",
     "test": "nyc ava && nyc report --reporter=html",
     "cover": "nyc ava && nyc report --reporter=text-lcov | coveralls",
     "scrape": "node ./rulesets/_scraper/",
