--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "cli": "node ./bin/",
     "debugger": "node ./lib/debugger/",
-    "build": "find ./lib -name '*.ts' | xargs rm -f && find ./lib -name '*.ts' | xargs rm -f && tsc",
+    "build": "find ./lib -name '*.ts' | xargs rm -f & find ./lib -name '*.js' | xargs rm -f && tsc & tsc -p tsconfig.remote.json",
     "dev": "tsc --watch & ava --watch",
     "test": "nyc ava && nyc report --reporter=html",
     "cover": "nyc ava && nyc report --reporter=text-lcov | coveralls",
