--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,7 @@
       "es2015",
       "es2016",
       "es2017",
-      "esnext",
-      "dom"
+      "esnext"
     ],
     "outDir": "./lib/",
     "baseUrl": ".",
@@ -22,6 +21,8 @@
     "node_modules",
     "plugin",
     "_*",
-    "./lib/"
+    "lib",
+    "**/remote.ts",
+    "**/*.remote.ts"
   ]
 }
