--- a/.markuplintrc
+++ b/.markuplintrc
@@ -10,7 +10,8 @@
     "case-sensitive-tag-name": true,
     "case-sensitive-attr-name": true,
     "attr-spasing": true,
-    "attr-equal-spasing": true,
+    "attr-equal-space-before": true,
+    "attr-equal-space-after": true,
     "multiline-tag": true,
     "multiline-attr": true,
     "indentation-attr": true,
