support util.promisify

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "markuplint",
-  "version": "0.21.0",
+  "version": "0.21.1",
   "description": "HTML linter for legacy/modern HTML, Web Components, SVG, MathML, AMP HTML and more.",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -34,7 +34,8 @@
     "meow": "^4.0.0",
     "os-locale": "^2.1.0",
     "parse5": "^4.0.0",
-    "strip-ansi": "^4.0.0"
+    "strip-ansi": "^4.0.0",
+    "util.promisify": "^1.0.0"
   },
   "devDependencies": {
     "@types/cli-color": "^0.3.29",
