--- a/package.json
+++ b/package.json
@@ -41,20 +41,21 @@
   "devDependencies": {
     "@types/cli-color": "^0.3.29",
     "@types/deep-assign": "^0.1.1",
-    "@types/meow": "^4.0.0",
+    "@types/get-stdin": "^5.0.1",
+    "@types/meow": "^4.0.1",
     "@types/node-fetch": "^1.6.7",
     "@types/os-locale": "^2.1.0",
     "@types/strip-ansi": "^3.0.0",
     "ava": "^0.25.0",
     "coveralls": "^3.0.0",
-    "eslint": "^4.18.2",
+    "eslint": "^4.19.1",
     "jsdom": "^11.6.2",
     "markuplint-plugin-textlint": "^0.5.0",
     "node-fetch": "^2.1.1",
-    "nyc": "^11.4.1",
+    "nyc": "^11.6.0",
     "textlint": "^10.1.4",
     "textlint-rule-preset-japanese": "^4.0.0",
     "tslint": "^5.9.1",
-    "typescript": "2.8.0-dev.20180307"
+    "typescript": "2.9.0-dev.20180323"
   }
 }
