--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "markuplint",
-  "version": "0.29.0",
+  "version": "0.30.0",
   "description": "HTML linter for legacy/modern HTML, Web Components, SVG, MathML, AMP HTML and more.",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -27,17 +27,17 @@
   },
   "dependencies": {
     "cli-color": "^1.2.0",
-    "cosmiconfig": "^4.0.0",
+    "cosmiconfig": "^5.0.5",
     "css-what": "^2.1.0",
     "deep-assign": "^2.0.0",
     "eastasianwidth": "^0.2.0",
     "find-node-modules": "^1.0.4",
     "get-stdin": "^6.0.0",
     "glob": "^7.1.2",
-    "meow": "^4.0.0",
+    "meow": "^5.0.0",
     "node-fetch": "^2.1.2",
     "os-locale": "^2.1.0",
-    "parse5": "^4.0.0",
+    "parse5": "^5.0.0",
     "strip-ansi": "^4.0.0",
     "util.promisify": "^1.0.0"
   },
@@ -47,18 +47,19 @@
     "@types/get-stdin": "^5.0.1",
     "@types/glob": "^5.0.35",
     "@types/meow": "^4.0.1",
-    "@types/node-fetch": "^1.6.8",
+    "@types/node-fetch": "^2.1.1",
     "@types/os-locale": "^2.1.0",
+    "@types/parse5": "^5.0.0",
     "@types/strip-ansi": "^3.0.0",
     "ava": "^0.25.0",
     "coveralls": "^3.0.1",
     "eslint": "^4.19.1",
-    "jsdom": "^11.10.0",
+    "jsdom": "^11.11.0",
     "markuplint-plugin-textlint": "^0.5.0",
-    "nyc": "^11.7.2",
+    "nyc": "^12.0.2",
     "textlint": "^10.2.1",
     "textlint-rule-preset-japanese": "^4.0.0",
     "tslint": "^5.10.0",
-    "typescript": "^2.8.3"
+    "typescript": "^2.9.2"
   }
 }
