--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "debugger": "node ./lib/debugger/",
     "build": "find ./lib -name '*.ts' | xargs rm -f & find ./lib -name '*.js' | xargs rm -f && tsc & tsc -p tsconfig.remote.json",
     "dev": "tsc --watch & ts --watch -p tsconfig.remote.json & ava --verbose --watch",
-    "dev-c": "tsc --watch",
+    "dev:watch": "tsc --watch & ts --watch -p tsconfig.remote.json",
     "test": "nyc ava && nyc report --reporter=html",
+    "test:watch": "ava --verbose --watch",
     "test-bin": "node ./bin/ './test/*'",
     "cover": "nyc ava && nyc report --reporter=text-lcov | coveralls",
     "scrape": "node ./rulesets/_scraper/",
