change npm script

--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "debugger": "node ./lib/debugger/",
     "prepublish": "find ./lib -name '*.ts' | xargs rm -f & find ./lib -name '*.js' | xargs rm -f && tsc & tsc -p tsconfig.remote.json",
     "build": "find ./lib -name '*.ts' | xargs rm -f & find ./lib -name '*.js' | xargs rm -f && tsc & tsc -p tsconfig.remote.json",
-    "dev": "tsc --watch & ts --watch -p tsconfig.remote.json & ava --verbose --watch",
-    "dev:watch": "tsc --watch & ts --watch -p tsconfig.remote.json",
+    "dev": "tsc --watch & ts --watch -p tsconfig.remote.json",
     "test": "nyc ava && nyc report --reporter=html",
     "test:watch": "ava --verbose --watch",
     "test-bin": "node ./bin/ './test/*'",
