--- a/package.json
+++ b/package.json
@@ -1,5 +1,19 @@
 {
+	"private": true,
+	"scripts": {
+		"build": "lerna run build",
+		"dev": "lerna run dev"
+	},
+	"workspaces": [
+		"packages/*",
+		"packages/@markuplint/*"
+	],
 	"devDependencies": {
-		"lerna": "^2.11.0"
+		"lerna": "^2.11.0",
+		"prettier": "^1.13.7",
+		"tslint": "^5.10.0",
+		"tslint-config-prettier": "^1.13.0",
+		"tslint-plugin-prettier": "^1.3.0",
+		"typescript": "^2.9.2"
 	}
 }
