--- a/package.json
+++ b/package.json
@@ -2,15 +2,36 @@
 	"private": true,
 	"scripts": {
 		"build": "lerna run build",
-		"dev": "lerna run dev"
+		"dev": "lerna run dev",
+		"test": "jest"
+	},
+	"jest": {
+		"transform": {
+			"^.+\\.tsx?$": "ts-jest"
+		},
+		"testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
+		"moduleFileExtensions": [
+			"ts",
+			"tsx",
+			"js",
+			"jsx",
+			"json",
+			"node"
+		]
+	},
+	"prettier": {
+		"printWidth": 200
 	},
 	"workspaces": [
 		"packages/*",
 		"packages/@markuplint/*"
 	],
 	"devDependencies": {
+		"@types/jest": "^23.1.4",
+		"jest": "^23.3.0",
 		"lerna": "^2.11.0",
 		"prettier": "^1.13.7",
+		"ts-jest": "^23.0.0",
 		"tslint": "^5.10.0",
 		"tslint-config-prettier": "^1.13.0",
 		"tslint-plugin-prettier": "^1.3.0",
