--- a/packages/@markuplint/html-parser/package.json
+++ b/packages/@markuplint/html-parser/package.json
@@ -17,6 +17,7 @@
     "@types/parse5": "^5.0.0"
   },
   "dependencies": {
+    "@markuplint/ml-ast": "^1.0.0-alpha",
     "parse5": "^5.0.0"
   }
 }
