--- a/packages/@markuplint/ml-ast/tsconfig.json
+++ b/packages/@markuplint/ml-ast/tsconfig.json
@@ -3,6 +3,9 @@
   "compilerOptions": {
     "outDir": "./lib"
   },
+  "include": [
+    "./src/**/*"
+  ],
   "exclude": [
     "node_modules",
     "lib"
