--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"transform": {
 			"^.+\\.tsx?$": "ts-jest"
 		},
-		"testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
+		"testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.tsx?$",
 		"moduleFileExtensions": [
 			"ts",
 			"tsx",
