--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "experimentalDecorators": true,
     "esModuleInterop": true,
     "noImplicitAny": true,
+    "declaration": true,
     "lib": [
       "dom",
       "es2015",
