--- a/packages/@markuplint/ml-core/package.json
+++ b/packages/@markuplint/ml-core/package.json
@@ -14,5 +14,7 @@
     "dev": "tsc -w -p ."
   },
   "devDependencies": {},
-  "dependencies": {}
+  "dependencies": {
+    "css-what": "^2.1.0"
+  }
 }
