--- a/packages/@markuplint/rules/package.json
+++ b/packages/@markuplint/rules/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@markuplint/custom-rule",
+  "name": "@markuplint/rules",
   "version": "1.0.0-alpha",
-  "description": "The helper of creating custom rule for markuplint",
+  "description": "Rules for markuplint",
   "repository": "git@github.com:markuplint/markuplint.git",
   "author": "Yusuke Hirao <yusukehirao@me.com>",
   "license": "MIT",
@@ -13,6 +13,8 @@
     "build": "tsc -p .",
     "dev": "tsc -w -p ."
   },
-  "devDependencies": {},
-  "dependencies": {}
+  "devDependencies": {
+  },
+  "dependencies": {
+  }
 }
