--- a/packages/@markuplint/ml-core/package.json
+++ b/packages/@markuplint/ml-core/package.json
@@ -6,8 +6,8 @@
   "author": "Yusuke Hirao <yusukehirao@me.com>",
   "license": "MIT",
   "private": false,
-  "main": "lib/index.js",
-  "types": "lib/index.d.ts",
+  "main": "lib/ml-core/src/index.js",
+  "types": "lib/ml-core/src/index.d.ts",
   "scripts": {
     "prepublish": "tsc -p .",
     "build": "tsc -p .",
