--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"private": true,
 	"scripts": {
 		"bootstrap": "lerna bootstrap",
-		"rm": "rm ./node_modules/parse5/lib/index.d.ts",
+		"clean": "rm ./node_modules/parse5/lib/index.d.ts & find \"./packages/@markuplint/\" | grep /lib/ | xargs rm -r",
 		"build": "lerna run build",
 		"dev": "lerna run --parallel dev & jest --watch",
 		"test": "jest --coverage",
