--- a/packages/@markuplint/file-resolver/package.json
+++ b/packages/@markuplint/file-resolver/package.json
@@ -6,12 +6,10 @@
   "author": "Yusuke Hirao <yusukehirao@me.com>",
   "license": "MIT",
   "private": false,
-  "main": "lib/file-resolver/src/index.js",
-  "types": "lib/file-resolver/src/index.d.ts",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "scripts": {
-    "prepublish": "tsc -p .",
-    "build": "tsc -p .",
-    "dev": "tsc -w -p ."
+    "build": "tsc --build"
   },
   "devDependencies": {
     "@types/cosmiconfig": "^5.0.3",
@@ -20,6 +18,7 @@
     "@types/node": "^10.5.7"
   },
   "dependencies": {
+    "@markuplint/ml-config": "1.0.0-alpha",
     "cosmiconfig": "^5.0.5",
     "deep-assign": "^2.0.0",
     "glob": "^7.1.2"
