--- a/packages/@markuplint/file-resolver/tsconfig.json
+++ b/packages/@markuplint/file-resolver/tsconfig.json
@@ -1,8 +1,15 @@
 {
   "extends": "../../../tsconfig.json",
   "compilerOptions": {
-    "outDir": "./lib"
+    "composite": true,
+    "outDir": "./lib",
+    "rootDir": "./src"
   },
+  "references": [
+    {
+      "path": "../ml-config"
+    }
+  ],
   "include": [
     "./src/**/*"
   ],
