--- a/packages/@markuplint/ml-core/package.json
+++ b/packages/@markuplint/ml-core/package.json
@@ -6,15 +6,15 @@
   "author": "Yusuke Hirao <yusukehirao@me.com>",
   "license": "MIT",
   "private": false,
-  "main": "lib/ml-core/src/index.js",
-  "types": "lib/ml-core/src/index.d.ts",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "scripts": {
-    "prepublish": "tsc -p .",
-    "build": "tsc -p .",
-    "dev": "tsc -w -p ."
+    "build": "tsc --build"
   },
   "devDependencies": {},
   "dependencies": {
+    "@markuplint/ml-ast": "1.0.0-alpha",
+    "@markuplint/ml-config": "1.0.0-alpha",
     "css-what": "^2.1.0"
   }
 }
