--- a/package.json
+++ b/package.json
@@ -1,48 +1,48 @@
 {
-	"private": true,
-	"scripts": {
-		"bootstrap": "lerna bootstrap",
-		"clean": "rm ./node_modules/parse5/lib/index.d.ts & find \"./packages/@markuplint/\" | grep /lib/ | xargs rm -r",
-		"build": "lerna run build",
-		"dev": "lerna run --parallel dev & jest --watch",
-		"test": "jest --coverage",
-		"test:rules": "ava **/src/**/*.test.js !**/lib/**/*.test.js"
-	},
-	"jest": {
-		"verbose": true,
-		"transform": {
-			"^.+\\.tsx?$": "ts-jest"
-		},
-		"testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.tsx?$",
-		"moduleFileExtensions": [
-			"ts",
-			"tsx",
-			"js",
-			"jsx",
-			"json",
-			"node"
-		],
-		"collectCoverageFrom": [
-			"packages/markuplint/src/**/*.ts",
-			"packages/@markuplint/*/src/**/*.ts"
-		]
-	},
-	"prettier": {
-		"printWidth": 120
-	},
-	"workspaces": [
-		"packages/*",
-		"packages/@markuplint/*"
-	],
-	"devDependencies": {
-		"@types/jest": "^23.3.1",
+  "private": true,
+  "scripts": {
+    "bootstrap": "lerna bootstrap",
+    "clean": "rm ./node_modules/parse5/lib/index.d.ts",
+    "build": "lerna run build",
+    "dev": "lerna run --parallel dev & jest --watch",
+    "test": "jest --coverage",
+    "test:rules": "ava **/src/**/*.test.js !**/lib/**/*.test.js"
+  },
+  "jest": {
+    "verbose": true,
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.tsx?$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ],
+    "collectCoverageFrom": [
+      "packages/markuplint/src/**/*.ts",
+      "packages/@markuplint/*/src/**/*.ts"
+    ]
+  },
+  "prettier": {
+    "printWidth": 120
+  },
+  "workspaces": [
+    "packages/*",
+    "packages/@markuplint/*"
+  ],
+  "devDependencies": {
+    "@types/jest": "^23.3.1",
     "jest": "^23.5.0",
-		"lerna": "^2.11.0",
+    "lerna": "^2.11.0",
     "prettier": "^1.14.2",
-		"ts-jest": "^23.1.3",
-		"tslint": "^5.11.0",
-		"tslint-config-prettier": "^1.14.0",
-		"tslint-plugin-prettier": "^1.3.0",
-		"typescript": "^3.0.1"
-	}
+    "ts-jest": "^23.1.3",
+    "tslint": "^5.11.0",
+    "tslint-config-prettier": "^1.14.0",
+    "tslint-plugin-prettier": "^1.3.0",
+    "typescript": "^3.0.1"
+  }
 }
