--- a/lerna.json
+++ b/lerna.json
@@ -1,10 +1,7 @@
 {
-  "lerna": "2.11.0",
+  "lerna": "3.0.3",
   "version": "independent",
   "npmClient": "yarn",
   "useWorkspaces": true,
-  "packages": [
-    "packages/*",
-    "packages/@markuplint/*"
-  ]
+  "packages": ["packages/*", "packages/@markuplint/*"]
 }
