--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,33 +1,21 @@
 {
-  "compilerOptions": {
-    "module": "commonjs",
-    "target": "es5",
-    "strict": true,
-    "strictNullChecks": true,
-    "strictPropertyInitialization": true,
-    "allowSyntheticDefaultImports": true,
-    "experimentalDecorators": true,
-    "esModuleInterop": true,
-    "noImplicitAny": true,
-    "declaration": true,
-    "lib": [
-      "dom",
-      "es2015",
-      "es2016",
-      "es2017",
-      "esnext"
-    ],
-    "baseUrl": ".",
-    "paths": {
-      "@markuplint/*": [
-        "./packages/@markuplint/*/src"
-      ],
-      "*": [
-        "./packages/*/src"
-      ]
-    },
-  },
-  "exclude": [
-    "node_modules"
-  ]
+	"compilerOptions": {
+		"module": "commonjs",
+		"target": "es5",
+		"strict": true,
+		"strictNullChecks": true,
+		"strictPropertyInitialization": true,
+		"allowSyntheticDefaultImports": true,
+		"experimentalDecorators": true,
+		"esModuleInterop": true,
+		"noImplicitAny": true,
+		"declaration": true,
+		"lib": ["dom", "es2015", "es2016", "es2017", "esnext"],
+		"baseUrl": ".",
+		"paths": {
+			"@markuplint/*": ["./packages/@markuplint/*/src"],
+			"*": ["./packages/*/src"]
+		}
+	},
+	"exclude": ["node_modules"]
 }
