--- a/packages/markuplint/package.json
+++ b/packages/markuplint/package.json
@@ -16,12 +16,16 @@
 	"scripts": {
 		"build": "tsc --build"
 	},
-	"devDependencies": {},
+	"devDependencies": {
+		"@types/os-locale": "^2.1.0"
+	},
 	"dependencies": {
 		"@markuplint/file-resoliver": "1.0.0-alpha",
+		"@markuplint/i18n": "1.0.0-alpha",
 		"@markuplint/ml-ast": "1.0.0-alpha",
 		"@markuplint/ml-config": "1.0.0-alpha",
 		"@markuplint/ml-core": "1.0.0-alpha",
-		"@markuplint/rules": "1.0.0-alpha"
+		"@markuplint/rules": "1.0.0-alpha",
+		"os-locale": "^3.0.1"
 	}
 }
