--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,11 @@
+os:
+    - windows
+    - linux
 language: node_js
 node_js:
+    - 8
+    - 10
     - 'stable'
 script:
     - yarn build
-    - yarn cover
+    - yarn test
