--- a/packages/@markuplint/ml-core/package.json
+++ b/packages/@markuplint/ml-core/package.json
@@ -16,6 +16,6 @@
 		"@markuplint/i18n": "1.0.0-alpha",
 		"@markuplint/ml-ast": "1.0.0-alpha",
 		"@markuplint/ml-config": "1.0.0-alpha",
-		"css-what": "^2.1.0"
+		"css-selector-parser": "^1.3.0"
 	}
 }
