--- a/packages/@markuplint/ml-core/package.json
+++ b/packages/@markuplint/ml-core/package.json
@@ -9,7 +9,8 @@
 	"main": "lib/index.js",
 	"types": "lib/index.d.ts",
 	"scripts": {
-		"build": "tsc --build"
+		"build": "tsc --build",
+		"clean": "tsc --build --clean"
 	},
 	"devDependencies": {},
 	"dependencies": {
