--- a/packages/@markuplint/html-ls/package.json
+++ b/packages/@markuplint/html-ls/package.json
@@ -7,6 +7,9 @@
 	"license": "MIT",
 	"private": false,
 	"main": "index.json",
+	"publishConfig": {
+		"access": "public"
+	},
 	"scripts": {},
 	"devDependencies": {},
 	"dependencies": {}
