--- a/packages/@markuplint/ml-core/package.json
+++ b/packages/@markuplint/ml-core/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@markuplint/ml-core",
-	"version": "1.0.0-alpha",
+	"version": "1.0.0-alpha.0",
 	"description": "The core module of markuplint",
 	"repository": "git@github.com:markuplint/markuplint.git",
 	"author": "Yusuke Hirao <yusukehirao@me.com>",
@@ -15,11 +15,10 @@
 		"build": "tsc",
 		"clean": "tsc --build --clean"
 	},
-	"devDependencies": {},
 	"dependencies": {
-		"@markuplint/i18n": "1.0.0-alpha",
-		"@markuplint/ml-ast": "1.0.0-alpha",
-		"@markuplint/ml-config": "1.0.0-alpha",
+		"@markuplint/i18n": "^1.0.0-alpha.0",
+		"@markuplint/ml-ast": "^1.0.0-alpha.0",
+		"@markuplint/ml-config": "^1.0.0-alpha.0",
 		"css-selector-parser": "^1.3.0"
 	}
 }
